# Rust-Server

./: .gitignore  Cargo.toml  Rocket.toml  config.toml
src/: constants.rs  main.rs  response.rs  setup.rs  utils.rs
src/app/: mod.rs  structs.rs
src/client/: mod.rs  structs.rs
src/config/: mod.rs
src/health/: mod.rs
src/message/: mod.rs  structs.rs
src/user/: mod.rs  structs.rs
src/version/: mod.rs
src/websockets/: mod.rs
